commit for everyone

--- a/css/px-context-browser-sketch.css
+++ b/css/px-context-browser-sketch.css
@@ -970,6 +970,10 @@ header {
 .selectable-item {
   padding-top: 5px;
   padding-bottom: 5px; }
+  .selectable-item div {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden; }
   .selectable-item .item-label {
     line-height: 20px; }
 
@@ -996,7 +1000,6 @@ header {
 
 .ruler {
   width: 16rem;
-  position: absolute;
   visibility: hidden;
   height: 0;
   top: 0;
@@ -1074,7 +1077,6 @@ px-spinner {
   background: white; }
 
 #ruler {
-  position: absolute;
   background: white;
   z-index: 2;
   width: 100%;
