--- a/sass/px-context-browser-sketch.scss
+++ b/sass/px-context-browser-sketch.scss
@@ -237,7 +237,6 @@ px-spinner {
   right: 46.75%;
 }
 
-
 #modal{
   position: fixed;
   background: black;
@@ -247,8 +246,23 @@ px-spinner {
   width:100%;
   height:100%;
 }
+
+#overlay {
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0s .10s, opacity .10s ease-out;
+
+  &.fadeFromHidden{
+    transition: opacity .10s ease-out;
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+
 #back {
   position:relative;
+  z-index: 1001;
 }
 #selectContext{
   background:white;
