--- a/sass/px-context-browser-sketch.scss
+++ b/sass/px-context-browser-sketch.scss
@@ -188,32 +188,31 @@ header {
   width:100.5%; // Ensures pixels fill out at the edge of a % defined container width.
 }
 
-.level {
-  li {
-    padding-right: $inuit-base-spacing-unit--small;
-    padding-left: $inuit-base-spacing-unit--small;
-    line-height: 1;
-    transition: color 0.2s ease 0s, background-color 0.2s ease 0s; // TODO: establish default transition length;
-    .opener.unopenable {
-      display: none; //opener on unopenable items is never displayed and not seen by screen readers
-    }
-    .btn.opener {
-      margin-top: -2px;
-      margin-right: $inuit-base-spacing-unit--tiny;
-      margin-left: $inuit-base-spacing-unit--tiny;
-      padding: 2px 3px 1px;
-      line-height: 1;
-      text-transform: uppercase;
-      -webkit-appearance: none;
-    }
-    &:not(.selected) .opener.openable {
-      // Do not use display:none to avoid altering visual tree structure live or conflicting with flex layout.
-      visibility: hidden; //opener on openable items not in a selected row is not displayed and not seen by screen readers
-    }
+li.column-item {
+  padding-right: $inuit-base-spacing-unit--small;
+  padding-left: $inuit-base-spacing-unit--small;
+  line-height: 1;
+  transition: color 0.2s ease 0s, background-color 0.2s ease 0s; // TODO: establish default transition length;
+  .opener.unopenable {
+    display: none; //opener on unopenable items is never displayed and not seen by screen readers
   }
-  &:not(.selected) li .opener.openable {
+  .btn.opener {
+    margin-top: -2px;
+    margin-right: $inuit-base-spacing-unit--tiny;
+    margin-left: $inuit-base-spacing-unit--tiny;
+    padding: 2px 3px 1px;
+    line-height: 1;
+    text-transform: uppercase;
+    -webkit-appearance: none;
+  }
+  &:not(.selected) .opener.openable {
+    // Do not use display:none to avoid altering visual tree structure live or conflicting with flex layout.
     visibility: hidden; //opener on openable items not in a selected row is not displayed and not seen by screen readers
   }
+}
+// TODO: this class should be applied directly to px-context-browser-column element
+.level:not(.selected) li .opener.openable {
+  visibility: hidden; //opener on openable items not in a selected row is not displayed and not seen by screen readers
 }
 
 [hidden] {
